// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem component should apply values from theme 1`] = `
<View
  replaceTheme={[Function]}
  title=""
  updateTheme={[Function]}
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
    testID="padView"
  >
    <View
      style={
        Object {
          "alignItems": "flex-start",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          Object {
            "backgroundColor": "transparent",
            "fontSize": 17,
          }
        }
        testID="listItemTitle"
        theme={
          Object {
            "ListTitle": Object {
              "title": "List Title",
            },
            "colors": Object {
              "disabled": "hsl(208, 8%, 90%)",
              "divider": "#bcbbc1",
              "error": "#ff190c",
              "grey0": "#393e42",
              "grey1": "#43484d",
              "grey2": "#5e6977",
              "grey3": "#86939e",
              "grey4": "#bdc6cf",
              "grey5": "#e1e8ee",
              "greyOutline": "#bbb",
              "platform": Object {
                "android": Object {
                  "error": "#f44336",
                  "primary": "#2196f3",
                  "secondary": "#9C27B0",
                  "success": "#4caf50",
                  "warning": "#ffeb3b",
                },
                "ios": Object {
                  "error": "#ff3b30",
                  "primary": "#007aff",
                  "secondary": "#5856d6",
                  "success": "#4cd964",
                  "warning": "#ffcc00",
                },
              },
              "primary": "#2089dc",
              "searchBg": "#303337",
              "secondary": "#8F0CE8",
              "success": "#52c41a",
              "warning": "#faad14",
            },
          }
        }
      >
        List Title
      </Text>
    </View>
  </View>
</View>
`;

exports[`ListItem component should render with Text component 1`] = `
<View
  title=""
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Text>
      Test element
    </Text>
  </PadView>
</View>
`;

exports[`ListItem component should render with avatar 1`] = `
<View
  title=""
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "peru",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <ListAvatar
      source="avatar_uri"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with input 1`] = `
<View
  title=""
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <ListInput
      placeholder="Enter Text"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with left icon 1`] = `
<View
  title=""
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <ListIcon
      color="red"
      name="wifi"
      size={20}
      type="font-awesome"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render with switch 1`] = `
<View
  title=""
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderBottomWidth": 0.5,
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Switch
      value={true}
    />
    <ListChevron />
  </PadView>
</View>
`;

exports[`ListItem component should render with title and subtitle 1`] = `
<View
  title=""
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  >
    <Themed.ListTitle
      subtitle="title test"
      subtitleStyle={
        Object {
          "backgroundColor": "peru",
        }
      }
      title="title test"
      titleProps={
        Object {
          "numberOfLines": 5,
        }
      }
      titleStyle={
        Object {
          "backgroundColor": "peru",
        }
      }
    />
    <Themed.ListTitle
      right={true}
      title="title"
    />
  </PadView>
</View>
`;

exports[`ListItem component should render without issues 1`] = `
<View
  title=""
>
  <PadView
    Component={[Function]}
    pad={16}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#bcbbc1",
        "flexDirection": "row",
        "padding": 14,
      }
    }
  />
</View>
`;
